tests/neg-custom-args/captures/classified-inheritance.check
-- Error: tests/neg-custom-args/captures/classified-inheritance.scala:5:6 ----------------------------------------------
5 |class C2 extends caps.Control, caps.Mutable // error
  |      ^
  |      class C2 inherits two unrelated classifier traits: trait Mutable and trait Control
-- Error: tests/neg-custom-args/captures/classified-inheritance.scala:10:6 ---------------------------------------------
10 |class C3 extends Matrix, Async // error
   |      ^
   |      class C3 inherits two unrelated classifier traits: trait Control and trait Mutable
